# claude-agent-templates

./: .gitignore  AGENTS_PHASE_1_USER_GUIDE.md  CLAUDE.md  Dockerfile  Makefile  PHASE_1_FULL_COMPLETION_LOG.txt  Phase_1_Test.md  QA_REPORT_VALIDATION.md  README.md  SYSTEM_QA_REPORT.md  SYSTEM_TEST_REPORT.md  docker-compose.yml  example_usage.py  pyproject.toml  requirements.txt  test_full_workflow_automated.py
.claude/: settings.local.json
.github/workflows/: ci-cd.yml
agents/: __init__.py
agents/base/: __init__.py  agent.py  coordinator.py  decision.py  lifecycle.py  vision.py  workflow.py
agents/specialized/: __init__.py  api_agent.py  cftc_agent.py  code_agent.py  deployment_agent.py  documentation_agent.py  schema_agent.py  team_assistant_agent.py  test_agent.py
agents/workflows/: table_extension.py
api/: openapi.yaml
cftc_analytics/: README.md  __init__.py
cftc_analytics/analytics/: __init__.py  engine.py  indicators.py
cftc_analytics/data/: __init__.py  client.py  models.py
cftc_analytics/visualization/: __init__.py  charts.py
docs/: IMPLEMENTATION_SUMMARY.md
docs/architecture/: 00-pre-design-specification.md  01-red-team-panel.md  02-enhanced-design.md
examples/: table_extension_demo.py  table_extension_full_demo.py
examples/cftc/: agent_usage.py  basic_usage.py  visualization_example.py
infrastructure/database/: schema.sql
templates/helios/: CLAUDE_CONTEXT.md  README.md  (+15 more)
tests/: conftest.py  stress_test.py  test_agents.py  test_concurrent_workflows.py  test_coordination.py  test_table_extension_workflow.py  test_workflows.py
(+349 files in other folders)
